# PromptKit

./: CHANGELOG.md  DEMO_GUIDE.md  GUIDE_BUSINESS.md  LICENSE  README.md  ROADMAP.md  dev-test.ps1  pyproject.toml  requirements.txt  tmp_cli.txt
.github/workflows/: ci.yml
src/promptkit/: cards.py  cli.py  plan.py  ticket.py
src/promptkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_ascii_snapshots.py  test_cli_smoke.py  test_core_ascii.py  test_selector_auto.py  test_webapp_htmx.py  test_webapp_markdown.py  test_webapp_pages.py  test_webapp_smoke.py
webapp/: __init__.py  main.py  requirements.txt
webapp/services/: promptkit_service.py
webapp/templates/: _output.html  index.html
