[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptkit"
version = "0.0.1"
description = "Prompt System Diagnostics Framework (explain-first; deterministic Iterate Cards)"
authors = [{name = "PromptKit"}]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "click==8.1.7",
  "typer==0.12.5",
]

[tool.setuptools]
packages = ["promptkit"]
package-dir = {"" = "src"}

[project.scripts]
promptkit = "promptkit.cli:app"

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "ruff==0.6.9",
  "pytest==8.3.3",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
